--- a/news-and-publications/projects/inner-northwest-upgrades.html
+++ b/news-and-publications/projects/inner-northwest-upgrades.html
@@ -4,9 +4,9 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta charset="utf-8">
-  <title>We're upgrading the Inner Northwest Line - Transport News | Public Transport for Thornsbury (PTfT)</title>
+  <title>We're upgrading the Inner Northwest Line - Transport News | Transnet</title>
   <meta name="description" content="Your local transport operator for Thornsbury">
-  <meta property="og:title" content="We're upgrading the Inner Northwest Line - Transport News | Public Transport for Thornsbury (PTfT)">
+  <meta property="og:title" content="We're upgrading the Inner Northwest Line - Transport News | Transnet">
   <meta property="og:type" content="website">
   <meta property="og:url" content="">
   <meta name="og:description" content="Your local transport operator for Thornsbury">
@@ -51,14 +51,15 @@
       <div class="nsw-header__main">
         <div class="nsw-header__waratah">
             <a href="/">
-              <img src="/img/PTfT-c.svg" alt="PTfT Logo" width="250px"/>
+              <img src="/img/TN-w.svg" alt="Transnet Logo" width="250px"/>
             </a>
-        </div>
+        </div>       
       </div>
+
+      
       <div class="nsw-header__menu">
         <button type="button" class="js-open-nav" aria-expanded="false" aria-controls="main-nav">
           <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">menu</span>
-          <span><span class="sr-only">Open</span> Menu</span>
         </button>
       </div>
     </div>
@@ -74,8 +75,8 @@
   </div>
   <ul class="nsw-main-nav__list">
     <li>
-      <a href="https://designsystem.nsw.gov.au/index.html#about-dpc">
-        <span>Travel Info</span>
+      <a href="/pt">
+        <span>Public Transport</span>
         <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">keyboard_arrow_right</span>
       </a>
 
@@ -93,54 +94,36 @@
         </div>
 
         <div class="nsw-main-nav__title">
-          <a href="/travel-info/">
-            <span>Travel Info</span>
+          <a href="/pt/">
+            <span>Public Transport</span>
             <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
           </a>
         </div>
 
-        <div class="nsw-main-nav__description"></div>
+        <div class="nsw-main-nav__description">Your one stop shop for all your trip planning needs, find information about maps, timetables, disruptions and more.</div>
 
         <ul class="nsw-main-nav__sub-list">
           <li>
-            <a href="/travel-info/trains">
-              <span>Suburban & Regional Trains</span>
-              <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">keyboard_arrow_right</span>
-            </a>
-            <div class="nsw-main-nav__sub-nav" id="sub-nav-1138" role="region" aria-label="Level 2 Submenu">
-              <div class="nsw-main-nav__header">
-                <button class="nsw-icon-button nsw-icon-button--flex js-close-sub-nav" type="button" aria-expanded="true" aria-controls="sub-nav-1138">
-                  <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">keyboard_arrow_left</span>
-                  <span>Back<span class="sr-only"> to previous menu</span></span> 
-                </button>
-
-                <button class="nsw-icon-button js-close-nav" type="button" aria-expanded="true">
-                  <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">close</span>
-                  <span class="sr-only">Close Menu</span>
-                </button>
-              </div>
-
-          <li>
-            <a href="/travel-info/trams">
-              <span>Trams</span>
+            <a href="/pt/trains">
+              <span>Trains</span>
             </a>
           </li>
 
           <li>
-            <a href="/travel-info/buses">
+            <a href="/pt/buses">
               <span>Buses</span>
             </a>
           </li>
 
           <li>
-            <a href="/travel-info/coaches">
-              <span>Coaches</span>
+            <a href="/pt/ferries">
+              <span>Ferries</span>
             </a>
           </li>
 
           <li>
-            <a href="/travel-info/metro">
-              <span>Metro</span>
+            <a href="/pt/regional">
+              <span>Regional Express (Trains & Coaches)</span>
             </a>
           </li>
 
@@ -148,8 +131,8 @@
       </div>
     </li>
     <li>
-      <a href="/fares">
-        <span>Fares & tickets</span>
+      <a href="/travelsmart">
+        <span>TravelSmart</span>
         <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">keyboard_arrow_right</span>
       </a>
 
@@ -167,7 +150,7 @@
         </div>
 
         <div class="nsw-main-nav__title">
-          <a href="/fares">
+          <a href="/travelsmart">
             <span>Fares & tickets</span>
             <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
           </a>
@@ -177,26 +160,26 @@
 
         <ul class="nsw-main-nav__sub-list">
           <li>
-            <a href="/fares/travelsmart">
-              <span>TravelSmart</span>
+            <a href="/travelsmart/fares">
+              <span>Fares</span>
             </a>
           </li>
           <li>
-            <a href="/fares/ticketnet">
-              <span>TicketNet</span>
+            <a href="/travelsmart/zones">
+              <span>Zones</span>
             </a>
           </li>
           <li>
-            <a href="/fares/travelpass">
-              <span>TravelPass</span>
+            <a href="/travelsmart/travelpass">
+              <span>PTfT TravelPass (for interstate travel)</span>
             </a>
           </li>
         </ul>
       </div>
     </li>
     <li>
-     <!-- <a href="https://designsystem.nsw.gov.au/index.html#publications">
-        <span>Publications</span>
+<a href="/news-and-publications">
+        <span>News and publications</span>
         <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">keyboard_arrow_right</span>
       </a>
 
@@ -214,8 +197,8 @@
         </div>
 
         <div class="nsw-main-nav__title">
-          <a href="https://designsystem.nsw.gov.au/index.html#publications">
-            <span>Publications</span>
+          <a href="/news-and-publications">
+            <span>News and publications</span>
             <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
           </a>
         </div>
@@ -224,51 +207,21 @@
 
         <ul class="nsw-main-nav__sub-list">
           <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>Level 2</span>
+            <a href="/news-and-publications/news">
+              <span>News</span>
             </a>
           </li>
           <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>Level 2</span>
+            <a href="/news-and-publications/projects">
+              <span>Projects</span>
             </a>
           </li>
           <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>Level 2</span>
+            <a href="/news-and-publications/whats-on">
+              <span>Whats On! (Events)</span>
             </a>
           </li>
-          <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>Level 2</span>
-            </a>
-          </li>
-          <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>Level 2</span>
-            </a>
-          </li>
-          <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>Level 2</span>
-            </a>
-          </li>
-          <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>Level 2</span>
-            </a>
-          </li>
-          <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>Level 2</span>
-            </a>
-          </li>
-          <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>Level 2</span>
-            </a>
-          </li>  
-        </ul> -->
+        </ul>
       </div>
     </li>
     <li>
@@ -286,11 +239,6 @@
 
 
 </nav>
-
-  
-
-  <!-- IMPORTANT NOTICE/MASSIVE DISRUPTION -->
- <!-- <div class="nsw-global-alert nsw-global-alert--light js-global-alert" role="alert">
     <div class="nsw-global-alert__wrapper">
       <div class="nsw-global-alert__content">
         <div class="nsw-global-alert__title">Transnet is officially moving to the new Public Transport for Thornsbury website from January 1st, 2026</div>
@@ -334,42 +282,20 @@
 
 <body>
 
- <div class="nsw-m-right-md nsw-m-left-md">
- <nav aria-label="Breadcrumbs" class="nsw-breadcrumbs js-breadcrumbs">
-  <ol>
-      <li>
-        <a href="/">Home</a>
-      </li>
-      <li>
-        <a href="/transport-news">Transport News</a>
-      </li>
-      <li>
-        <a href="/transport-news/inner-northwest-upgrades">We're upgrading the Inner Northwest Line</a>
-      </li>
-  </ol>
-</nav> 
+<div class="nsw-section nsw-section--image" style="background-image: url(/img/inw-upg.png);">
+  <div class="hero-search">
+  </div>
 </div>
-
- <div class="nsw-m-right-md nsw-m-left-md">
-<p>&nbsp; </p>
- </div>
-
-
-</head>
-<body>
-    <div class="nsw-hero-banner nsw-hero-banner--dark">
+    <div class="nsw-hero-banner nsw-hero-banner--light">
     <div class="nsw-hero-banner__container">
       <div class="nsw-hero-banner__wrapper">
         <div class="nsw-hero-banner__content">
+          <p class="nsw-small">News and publifications > Projects</p>
           <h1>We're upgrading the Inner Northwest Line</h1>
-          <p class="nsw-intro">By creating 2 extensions from Central & Saunderland</p>
-        </div>
-        <div class="nsw-hero-banner__box">
-          <img class="nsw-hero-banner__image" src="/img/inw-upg.png"/>
         </div>
       </div>
     </div>
-  </div>
+  </div> 
 
   <div class="nsw-m-right-md nsw-m-left-md">
     <div class="nsw-p-top-sm">
@@ -379,7 +305,7 @@
             <div class="nsw-m-right-md nsw-m-left-md">
               <div class="nsw-p-top-sm">
                 <h1>Project overview</h1>
-                <p>We are extending the Saunderland Line past Central & Saunderland to 2 new destinations, Croydon past Saunderland & Kyama Junction past Central.</p>
+                <p>We are extending the Scofield Line past Thornsbury & Scofield to 2 new destinations, Croydon past Scofield & Kyama  past Thornsbury.</p>
                 <p>This is to improve suburban development, open up more transport opportunities & create a connection to the beachside.</p>
                 </div>
             </div>
@@ -388,8 +314,8 @@
               <p>&nbsp;</p>
               <div class="nsw-m-right-md nsw-m-left-md">
                 <div class="nsw-p-top-sm">
-                  <h1>When is the Kyama Junction Extension expected to open?</h1>
-                  <p>The Kyama Junction Extension opened on September 8th, and is now currently in service</p>
+                  <h1>When is the Kyama Extension expected to open?</h1>
+                  <p>The Kyama Extension opened on September 8th, and is now currently in service</p>
                   </div>
               </div>
 
@@ -398,7 +324,7 @@
               <div class="nsw-m-right-md nsw-m-left-md">
                 <div class="nsw-p-top-sm">
                   <h1>When is the Croydon Extension expected to open?</h1>
-                  <p>The first service is scheduled to run in 2026, opening date will be announced further into project completion, buses substitute rail services between Saunderland & Croydon until works are completed.</p>
+                  <p>The Croydon Extension opened November 1st, and is now currently in service</p>
                   </div>
               </div>
   </div>  
@@ -427,7 +353,7 @@
         <li><a href="/disclaimer">Disclaimer</a></li>
       </ul>
       <div class="nsw-footer__social">
-        <a class="nsw-icon-button" href="https://x.com/PTfT_" target="_blank" rel="noopener" aria-label="X (formerly Twitter)">
+        <a class="nsw-icon-button" href="https://x.com/TransnetPT_" target="_blank" rel="noopener" aria-label="X (formerly Twitter)">
           <svg role="img" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
             <title>X (formerly Twitter)</title>
             <path d="M18.6348 13.5498L30.2914 0H27.5292L17.4078 11.7651L9.32385 0H0L12.2245 17.7909L0 32H2.76239L13.4508 19.5756L21.9881 32H31.3119L18.6342 13.5498H18.6348ZM14.8514 17.9477L13.6128 16.1761L3.75772 2.07949H8.00059L15.9537 13.4559L17.1923 15.2275L27.5305 30.0151H23.2876L14.8514 17.9484V17.9477Z" fill="white"/>
@@ -437,8 +363,8 @@
       </div>
       </div>
       <div class="nsw-footer__info">
-        <div class="nsw-footer__copyright">Copyright © 2025 - Public Transport for Thornsbury is an umbrella agency for the Department of Transport & Agriculture</div>
-        <div class="nsw-footer__built"><img src="./img/TBGL.svg" alt="Thornsbury Government Logo" style="height: 100%;"></div>
+        <div class="nsw-footer__copyright">Copyright © 2025 - Transnet is an umbrella agency for the Department of Transport & Agriculture</div>
+        <div class="nsw-footer__built"><img src="/img/TBGL.svg" alt="Thornsbury Government Logo" style="height: 100%;"></div>
       </div>
     </div>
   </div>
